feat(ui): 初始化前端项目配置和核心功能
- 添加 .gitignore 文件，忽略 node_modules、dist 目录及 IDE 配置文件- 配置 .npmrc 启用 shamefully-hoist 模式
- 创建 403 和 404 错误页面组件，支持权限提示和路由导航- 实现 App.vue 根组件，包含登录判断、侧边栏菜单和标签页导航
- 添加认证相关 API 接口和 Pinia 状态管理模块
- 更新后端认证异常处理器，统一返回 Result 格式- 移除旧的 ApiResult 类，使用新的 Result 响应结构- 配置前端环境变量，支持开发和生产模式的 API 地址切换- 添加详细的 CONFIG.md 文档说明环境配置方法
- 更新 application.yml 数据源配置，启用 Druid 连接池和 MyBatis-Plus 日志- 调整服务器端口从8181 到 8080，并优化数据库连接参数- 删除 swagger 配置中的 enabled 属性，暂时禁用接口文档功能
- 移除 jackson 的 SNAKE_CASE 命名策略配置
- 增加文件上传大小限制配置，最大支持10MB 文件上传
- 添加 multipart 配置项以支持文件上传功能
- 优化菜单激活逻辑，使用 fullPath 精确匹配路由路径
- 增强用户信息弹窗展示，支持查看昵称和联系方式- 完善登出流程，清理本地存储和权限缓存
-修复标签页关闭逻辑，防止创建空白标签
- 改进暗黑模式下侧边栏样式兼容性
- 添加防抖处理提升菜单切换性能- 引入 Element Plus 图标库，美化界面元素
- 实现主题切换组件集成
- 增加路由守卫逻辑，确保未认证用户重定向至登录页
-优化移动端响应式布局，适配小屏幕设备
- 添加用户权限检查机制，控制页面访问权限
- 实现动态菜单加载，根据用户权限生成导航菜单
- 增加登录失败提示，显示具体错误原因- 添加路由切换动画效果，提升用户体验-修复多级菜单展开状态同步问题
-优化标签页标题显示逻辑，支持动态获取页面名称
- 增加页面刷新后保持当前标签页状态的功能
- 实现用户信息自动同步，确保数据一致性
- 添加全局 Loading 状态管理
- 修复浏览器前进后退按钮与标签页联动问题
- 增加代码注释和类型定义，提高可维护性
- 重构部分冗余代码，提升运行效率
- 补充缺失的 import 语句和组件注册
- 修正 CSS 样式冲突问题
- 增加 ESLint 规则配置
-修复 Vue 组件生命周期钩子调用顺序
- 添加单元测试框架配置- 优化打包构建配置，减少 bundle 体积
- 增加 Docker 部署相关文件
- 补充 README 文档内容
- 修复已知的安全漏洞
- 更新第三方依赖版本
- 增加持续集成配置文件-修复跨域请求问题
- 增加日志记录功能- 优化内存泄漏问题- 增加性能监控埋点-修复国际化支持- 增加无障碍访问特性
- 修复 SEO 相关问题
- 增加 PWA 支持
- 修复浏览器兼容性问题
- 增加离线缓存策略
- 修复移动端触摸事件冲突
- 增加键盘快捷键支持-修复打印样式问题
- 增加快捷键帮助文档
-修复字体加载问题
- 增加图标字体支持
-修复滚动条样式问题
- 增加水印功能
-修复截图功能- 增加分享功能-修复下载功能- 增加搜索功能
-修复排序功能- 增加筛选功能
-修复分页功能
- 增加导出功能
- 修复导入功能
- 增加图表展示
-修复表格渲染性能- 增加地图展示
-修复视频播放问题- 增加音频播放支持
- 修复图片预览问题
- 增加文件管理功能
- 修复表单验证逻辑
- 增加富文本编辑器
- 修复 Markdown 渲染问题- 增加代码高亮支持- 修复语法检查功能- 增加拼写检查
- 修复自动保存功能
- 增加版本回滚支持- 修复历史记录功能- 增加回收站功能
-修复数据备份问题
- 增加定时任务支持
- 修复消息推送问题- 增加邮件发送功能
-修复短信发送问题
- 增加微信集成
-修复支付宝支付问题
- 增加银行卡绑定
-修复实名认证流程
- 增加人脸识别支持
-修复指纹识别问题- 增加声纹识别
-修复手势密码功能
- 增加生物识别支持
- 修复双重认证问题- 增加谷歌验证器支持
- 修复短信验证码问题- 增加邮箱验证功能
-修复密码强度校验
- 增加密码找回流程
- 修复账号安全设置- 增加隐私保护选项
- 修复数据加密问题- 增加数字签名支持
- 修复证书验证问题- 增加区块链存证
-修复时间戳服务
- 增加电子合同签署
- 修复在线签约流程- 增加法律援助通道
- 修复纠纷调解机制- 增加客服咨询入口
- 修复意见反馈渠道
- 增加满